2007-08-04  Chris Morley
	* include/OB_BGL/ :Added interface with Boost Graph Library
	written by Gerde Menche.
	
	* include/openbabel/mol.h: modified EndAtoms() and EndBonds()
	to return after the atomas and bonds in _vatom and _vbond
	rather than the overallocated end of the vectors. Needed for
	the above.

2007-08-03  Jean Brefort  <jean.brefort@normalesup.org>

	* include/openbabel/format.h: Format::FormatsMIMEMap() must
	return a reference, otherwise, a new copy is used each time
	and no mime type is usable.

2007-07-25  Chris Morley

	* src/formats/mdlformat.cpp(MDLFormat::ReadMolecule):
	Added more tests to prevent ill-formed lines in M RAD, CHG and ISO
	lines from causing a crash. Added informative error message.
	Deficiency pointed out by Andrew Dalke.
	
2007-07-07  Chris Morley

	*src/descriptor.cpp, src/include/openbabel/descriptor.h:
	Add wildcard * facility and simplify - remove GenericDataCompare.
	
2007-07-06  Chris Morley

	* src/descriptor.cpp, src/include/openbabel/descriptor.h:
	Add MatchPairData() so that Property names with spaces can be
	searched for by replacing them with underscores in the filter,
	append or delete strings, as suggested by Noel.
	(GenericDataCompare): fix test for two numbers
	Added GetValues() to implement --append
	
	*src/transform.cpp: Extra option: --append (to mol title).
	Does what Joey Bedell wanted.
	
2007-06-15  Chris Morley
	
	* src/smartsdescriptors.cpp: Added SmartsDescriptor class to 
	allow filters based on SMARTStest (like Number of Hydrogen
	Bond Acceptors) to be defined in a single line.
	A few (SMARTS from JoelLib) are defined: HBA1 HBA2 HBD nF
	
	* src/filters.cpp: in SMARTS filter only look for single match.
	
	* src/formats/inchiformat.cpp: small change in Description()

2007-06-05  Chris Morley

	* src/formats/smilesformat.cpp(ParseSmiles):ignore any char<0
	Caused crash in isspace() in Visual C++8. Probably solves bug
	#1730132.
	
2007-06-01  Noel O'Boyle <baoilleach@gmail.com>
